<?xml version="1.0"?>
<package>
  <name>squirrel_sensing_node</name>
  <version>0.0.0</version>
  <description>The squirrel_sensing_node package</description>

  <maintainer email="jelizaveta@todo.todo">jelizaveta</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>

</package>
