<?xml version="1.0"?>
<package>
  <name>uibk_arm_controller</name>
  <version>0.0.0</version>
  <description>The uibk_arm_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="simon.hangl@uibk.ac.at">Simon Hangl</maintainer>


  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robotino_driver</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>control_toolbox</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-readchar-pip</run_depend>
  <run_depend>robotino_driver</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
